--- a/ansible/03-JavaApplication/playbook-javainstall.yml
+++ b/ansible/03-JavaApplication/playbook-javainstall.yml
@@ -1,8 +1,39 @@
 ---
 - name: Install Java Api
-  hosts: all
+  hosts: api
+  tags: API
+  become: yes
+  vars:
+    jre_version: 17
+  tasks:
+    - name: Debug OS Family
+      ansible.builtin.debug:
+        #var: ansible_facts
+        #var: ansible_facts['os_family']
+        #var: ansible_facts.os_family
+        var: ansible_os_family
+    - name: Install JRE RedHat
+      tags: PACKAGE
+      ansible.builtin.yum:
+        name: java-{{ jre_version }}-openjdk
+      when: ansible_os_family == 'RedHat'
+    - name: Install JRE Debian
+      tags: PACKAGE
+      ansible.builtin.apt:
+        name: openjdk-{{ jre_version }}-jre
+      when: ansible_os_family == 'Debian'
+
+- name: Install Test Environment
+  hosts: test
+  tags: TEST
   become: yes
   tasks:
-    - name: Install JRE
+    - name: Install softwares
+      tags: PACKAGE
       ansible.builtin.yum:
-        name: java-17-openjdk
+        #name: wget,jq
+        name: "{{ item }}" 
+      loop:
+        - wget
+        - jq
+      
