--- a/ansible/03-JavaApplication/playbook-javainstall.yml
+++ b/ansible/03-JavaApplication/playbook-javainstall.yml
@@ -22,6 +22,25 @@
       ansible.builtin.apt:
         name: openjdk-{{ jre_version }}-jre
       when: ansible_os_family == 'Debian'
+    - name: API User
+      ansible.builtin.user:
+        name: "{{ api_user }}"
+        shell: /usr/sbin/nologin
+    - name: API Directory
+      ansible.builtin.file:
+        path: "{{ api_directory }}"
+        state: directory
+        mode: 0755
+        owner: "{{ api_user }}"
+        group: "{{ api_group }}"
+    - name: API Artifact
+      ansible.builtin.copy:
+        src: "{{ api_jar }}"
+        dest: "{{ api_directory }}"
+        mode: 0444
+        owner: "{{ api_user }}"
+        group: "{{ api_group }}"
+
 
 - name: Install Test Environment
   hosts: test
