--- a/ansible/04-AppWithRoles/roles/api/handlers/main.yml
+++ b/ansible/04-AppWithRoles/roles/api/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 # handlers file for roles/api
 - name: restart api service
-  ansible.builtin.debug:
-    msg:  "TODO: restart api service"
+  # ansible.builtin.debug:
+  #   msg:  "TODO: restart api service"
+  ansible.builtin.systemd_service:
+    name: api
+    daemon_reload: true
+    state: restarted
