--- a/ansible/04-AppWithRoles/roles/db/tasks/main.yml
+++ b/ansible/04-AppWithRoles/roles/db/tasks/main.yml
@@ -1,2 +1,29 @@
 ---
 # tasks file for roles/db
+- name: Mariadb and misc packages
+  ansible.builtin.apt:
+    name: mariadb-server,python3-mysqldb,net-tools
+
+- name: MariaDB Config
+  ansible.builtin.lineinfile:
+    path: /etc/mysql/mariadb.conf.d/50-server.cnf
+    regexp: "^bind-address"
+    line: "bind-address = 0.0.0.0"
+
+- name: MariaDB Service
+  ansible.builtin.systemd_service:
+    name: mariadb
+    # TODO: handle start/restart with handler
+    state: restarted
+    enabled: true
+
+- name: Api Database
+  community.mysql.mysql_db:
+    name: "{{ db_name }}"
+
+- name: Database User
+  community.mysql.mysql_user:
+    name: "{{ db_user }}"
+    password: "{{ db_password }}"
+    host: '%'
+    priv: "{{ db_name }}.*:ALL,GRANT"
